// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAddress Saga should dispatch the addressLoaded action if it requests the data successfully 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": true,
  "payload": Array [
    Object {
      "@@redux-saga/IO": true,
      "combinator": false,
      "payload": Object {
        "args": Array [
          "https://api.omniexplorer.info/v1/address/addr",
          Object {
            "body": "addr=17ScKNXo4cL8DyfWfcCWu1uJySQuJm7iKx",
            "headers": Object {
              "Content-Type": "application/x-www-form-urlencoded",
            },
            "method": "POST",
          },
        ],
        "context": null,
        "fn": [Function],
      },
      "type": "CALL",
    },
    Object {
      "@@redux-saga/IO": true,
      "combinator": false,
      "payload": Object {
        "args": Array [
          "https://blockchain.info/balance?cors=true&active=17ScKNXo4cL8DyfWfcCWu1uJySQuJm7iKx",
        ],
        "context": null,
        "fn": [Function],
      },
      "type": "CALL",
    },
  ],
  "type": "ALL",
}
`;

exports[`getAddress Saga should dispatch the addressLoaded action if it requests the data successfully 2`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [
      "https://api.blockchair.com/bitcoin/dashboards/address/17ScKNXo4cL8DyfWfcCWu1uJySQuJm7iKx?state=latest&limit=0,0",
    ],
    "context": null,
    "fn": [Function],
  },
  "type": "CALL",
}
`;
